--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -19,7 +19,6 @@
             android:layout_marginTop="44dp"
             android:layout_marginEnd="50dp"
             android:hint="Update First Name"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +32,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Last Name"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +45,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Email"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +57,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Gender"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +69,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Phone Number"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +81,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Land Line"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +93,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Address"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +105,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Second Address"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +117,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update City"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +129,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Country"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +141,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Zip Code"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +153,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Nacionality"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +165,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update First Language"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +177,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Second Language"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -203,7 +189,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Description"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -216,11 +201,22 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:hint="Update Education Level"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/activity_modify_description" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:hint="Update Education Level"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_modify_level" />
         <Button
             android:id="@+id/activity_modify_update"
             android:layout_width="wrap_content"
@@ -230,7 +226,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activity_modify_level" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
