--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,7 +24,7 @@
         android:text="Change Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fraagment_settings_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/fraagment_settings_photo" />
 
     <Button
         android:id="@+id/fraagment_settings_delete"
@@ -35,4 +35,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fraagment_settings_password" />
+
+    <Button
+        android:id="@+id/fraagment_settings_photo"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Change Perfil Photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fraagment_settings_edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
