--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -43,8 +43,8 @@
         android:layout_marginEnd="50dp"
         android:layout_marginTop="15dp"
         android:ems="10"
-        android:hint="Event description"
-        android:inputType="textPersonName"
+        android:hint="Number of days"
+        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_add_place_name" />
