--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/fragment_listview_places"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Places"
-        android:textSize="50dp"
-        android:layout_centerInParent="true"/>
+        android:background="@color/white"
+        android:translationZ="90dp" />
 
 </RelativeLayout>
