--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="56dp"
         android:text="User Name"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,10 +22,10 @@
         android:id="@+id/other_profile_fn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="12dp"
         android:text="First Name"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/set_profile" />
 
@@ -33,10 +33,10 @@
         android:id="@+id/other_profile_ln"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="12dp"
         android:text="Last Name"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/other_profile_fn" />
 
@@ -44,20 +44,19 @@
         android:id="@+id/other_profile_role"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="12dp"
         android:text="Role"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/other_profile_ln" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="161dp"
-        android:layout_height="183dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+        android:layout_width="154dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_avatar_svgrepo_com" />
@@ -77,10 +76,10 @@
         android:id="@+id/other_profile_followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="200dp"
         android:text="Followers: "
-        android:textSize="25dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/other_profile_role" />
@@ -90,9 +89,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="190dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="Following: "
-        android:textSize="25dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
