Participantes num evento

--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -3,6 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text=" Wait a little \n  is loading \n  the users"
+        android:textSize="50dp" />
+
     <ListView
         android:id="@+id/fragment_listview"
         android:layout_width="match_parent"
