--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -43,7 +43,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginTop="15dp"
         android:ems="10"
-        android:hint="Number of days"
+        android:hint="Number of hours"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
