--- a/app/src/main/res/layout/fragment_other_profile_roles.xml
+++ b/app/src/main/res/layout/fragment_other_profile_roles.xml
@@ -64,7 +64,7 @@
 
     <Button
         android:id="@+id/other_profile_follow_roles"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Follow"
@@ -75,9 +75,9 @@
 
     <Button
         android:id="@+id/other_profile_change_roles"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:text="Change Role"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,9 +85,9 @@
 
     <Button
         android:id="@+id/other_profile_warning"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:text="Give a warning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +118,17 @@
         app:layout_constraintHorizontal_bias="0.386"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/other_profile_role_roles" />
+
+    <Button
+        android:id="@+id/other_profile_disable_roles"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Disable Account"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/other_profile_warning" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
